tests/compile_failures/attributes/named_path_values.rs
use dioxus_sugar::attributes;

#[attributes(tag = "div")]
struct Props {}

fn main() {}